fix: Responsive layout fixes - Fix positioning and dimensions of canvas for various screens - Use element-resize-detector to change canvas height based on its width - TODO: Fix color palette layout issues - Increase round duration to 60 seconds

--- a/client/src/components/player-list/UserScoreList.css
+++ b/client/src/components/player-list/UserScoreList.css
@@ -3,8 +3,6 @@
   overflow: auto;
   height: 42vh;
   margin-bottom: 30px;
-  margin-left:10%;
-  margin-right:10%;
 }
 
 .userScoreListItem {
